# A0580_V5

./: .gitignore  A0580_V4.code-workspace  A0580_V5.code-workspace  README.md  pyproject.toml  requirements.txt  setup.py
app/: Documentation de l'Application Assistant.txt  __init__.py  architecture.md  main.py  main.py.old
app/src/: __init__.py
app/src/config/: __init__.py  default.yml  load_config.py
app/src/core/: __init__.py  knowledge_bases_manager.py  search_engine.py  state_manager.py  types.py
app/src/modules/: __init__.py
app/src/pages/: __init__.py  chat_page.py  components.py  llm_selector.py  sidebar_page.py  sidebar_page.py.old
app/src/pages/components/: document_uploader.py.old  kb_expander.py.old  llm_selector.py
app/src/pages/interfaces/: document.py  filter.py  kb_ui_logic.py  state_manager.py  ui_renderer.py
app/src/pages/states/: chat_state.py  filter_state.py  kb_state.py
app/src/pages/utils/: __init__.py  document_operations.py.old  kb_operations.py
app/src/ui/: __init__.py
app/src/ui/components/: __init__.py
app/src/ui/interfaces/: chat.py  filter.py  kb_infrastructure.py  kb_ui_logic.py  llm.py  state_manager.py  ui_renderer.py
app/src/ui/states/: chat_state.py  kb_state.py  llm_state.py
app/src/utils/: __init__.py
app/tests/: conftest.py
data/knowledge_bases/chromadb/chunk_storage/: A0275.db  A0322_demo.db  A0507_demo.db  A0609.db  CCTP_A0579.db  test.pkl  test2.pkl
data/knowledge_bases/chromadb/metadata/: A0275.json  A0322_demo.json  A0507_demo.json  A0609.json  CCTP_A0579.json  normes.json  test.json  test2.json
(+103 files in other folders)
